[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Testing/TestingPanel.gd" type="Script" id=1]

[node name="TestingPanel" type="CanvasLayer"]

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.403922 )
margin_left = 11.0
margin_top = 13.0
margin_right = 126.0
margin_bottom = 118.0
script = ExtResource( 1 )

[node name="Label_TotalScore" type="Label" parent="Panel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 45.0
margin_bottom = 19.0

[node name="Label_LevelScore" type="Label" parent="Panel"]
margin_left = 5.0
margin_top = 24.0
margin_right = 45.0
margin_bottom = 38.0

[node name="Label_CurrentLevel" type="Label" parent="Panel"]
margin_left = 5.0
margin_top = 43.0
margin_right = 45.0
margin_bottom = 57.0

[node name="Label_Pages" type="Label" parent="Panel"]
margin_left = 5.0
margin_top = 63.0
margin_right = 45.0
margin_bottom = 77.0

[node name="Label_Skulls" type="Label" parent="Panel"]
margin_left = 5.0
margin_top = 82.0
margin_right = 45.0
margin_bottom = 96.0
